--- a/src/App/UserBundle/Resources/views/layout.html.twig
+++ b/src/App/UserBundle/Resources/views/layout.html.twig
@@ -1,5 +1,11 @@
 {% extends 'KitpagesCmsBundle:Page:layout.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/appuser/css/style.css') }}"  media="screen" />
+{% endblock %}
+
+
 {% block body %}
     <div class="layout-inside-main">
         {% block fos_user_content %}{% endblock %}
