--- a/src/App/SiteBundle/Resources/views/Page/template/home.html.twig
+++ b/src/App/SiteBundle/Resources/views/Page/template/home.html.twig
@@ -19,16 +19,8 @@ Welcome to the demo of the Kitpages CMS. All the content of this website is rein
 <br/>
 You can change the content of this website by signing in with the account : 
 <ul><li>Login : "admin"</li><li>password: "admin"</li></ul>
-You can also see a <a href="http://www.kitpages.fr/fr/kitpages-cms-bundle-symfony2" target="_blank">4 minutes video presentation in french on kitpages.fr</a> <br/>
-The Kitpages CMS is developped and distributed in opensource as a symfony2 bundle : <a href="https://github.com/kitpages/KitpagesCmsBundle" target="_blank">KitpagesCmsBundle on Github</a>
+The Kitpages Shop CMS is developped and distributed in opensource as a symfony2 bundle : <a href="https://github.com/kitpages/KitpagesShopCmsBundle" target="_blank">KitpagesShopCmsBundle on Github</a>
     </div>
     {% render 'KitpagesCmsBundle:Page:widgetZone' with {'location_in_page': 'edito', 'page':kitCmsPage} %}
 </div>
-
-<div style="clear: both;"></div>
-<br/>
-
-
-
-<div style="clear:both;"></div>
 {% endblock body %}
